Prevent media library from overlapping

--- a/style.css
+++ b/style.css
@@ -17,7 +17,10 @@ Use it to make something cool, have fun, and share what you've learned with othe
 }
 
 #adminmenuwrap {
-    z-index: 999999; /* +1 */
+    z-index: 1000; /* +1 */
+}
+#wpadminbar {
+    z-index: 999 !important;
 }
 
 /* Red color */
